收支趨勢圖/StarCanvas(參考教學)

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,7 +9,7 @@
 	--color-secondary: #131439;
 	/* --color-tertiary: rgb(45, 47, 118); */
 
-	--vt-c-indigo: #2c3e50;
+	/* --vt-c-indigo: #2c3e50; */
 	--color-yellow-second: #d6ac04;
 }
 :root {
