--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,7 +7,7 @@
 
 	--color-main: #090a29;
 	--color-secondary: #131439;
-	/* --color-tertiary: rgb(45, 47, 118); */
+	--color-tertiary: #0b0c22;
 
 	/* --vt-c-indigo: #2c3e50; */
 	--color-yellow-second: #d6ac04;
